--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ rust-version = "1.65.0"
 
 [dependencies]
 num-rational = { version = "0.4", default-features = false }
+serde = { version = "1.0", default-features = false, features = [
+    "derive",
+], optional = true }
 
 [features]
 default = ["std"]
 std = ["num-rational/std"]
-serde = ["num-rational/serde"]
+serde = ["num-rational/serde", "dep:serde"]
